--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,21 +17,22 @@ body::before {
 
 /* Sticky footer styles
 -------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
-}
+
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
   overflow-x: hidden;
+  position: relative;
 }
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
-  width: 100%;
+  min-width: 100vw;
   /* Set the fixed height of the footer here */
-  height: 60px;
+  height: 50px;
   line-height: 60px; /* Vertically center the text there */
   /* background-color: #f5f5f5; */
 }
@@ -52,3 +53,39 @@ body > .container {
 code {
   font-size: 80%;
 }
+
+/* style for button add new */
+.buttonupdate button {
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  margin-left: 8px;
+  background-color: rgba(167, 255, 34, 0.801);
+  color: white;
+  font-size: 1.1em;
+}
+
+.buttonupdate button:hover {
+  background-color: rgba(176, 224, 104, 0.801);
+}
+
+.buttonupdate {
+  text-align: right;
+  margin-right: 50px;
+}
+/* end of style for button add new */
+
+/* end of table and main title */
+
+.doctorlist-title {
+  margin: 0 20px;
+}
+
+.main .title {
+  color: whitesmoke;
+  letter-spacing: 8px;
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+/* style footer */
